fix: jump

--- a/src/assets/ghost.scss
+++ b/src/assets/ghost.scss
@@ -1,10 +1,12 @@
-.preview-ghost {
+.preview-ghost[data-type="component"] {
   border: 2px dashed #eee;
   width: 100%;
   height: 80px;
   margin: 0;
+  padding: 0;
   background-color: #f8f8f8;
   box-sizing: border-box;
+
   .component-info {
     display: none!important;
   }
